Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
       <div class="inner">
         <h1>Projekt &quot;Chill&quot;</h1>
-        <h2>Dmitri Tsumak ja Anastassia Ivanova</h2>
+        <h2>Dmitri Tsumak, Anastassia Ivanova</h2>
         <a href="https://github.com/tsudmi/Projekt" class="button"><small>View project on</small>GitHub</a>
       </div>
     </header>
@@ -31,37 +31,49 @@
           <h1>
 <a name="projekti-%C3%BClevaade" class="anchor" href="#projekti-%C3%BClevaade"><span class="octicon octicon-link"></span></a>Projekti ülevaade</h1>
 
-<p>Järgmise teksti sisu annab ülevaade informaatika projektist, mida tehti Dmitri Tsumak ja Anastassia Ivanova(Tartu Ülikool, 1 aasta, arvutiteaduse instituut).
-Märkus: koos all toodud tekstiga  annab visuaalselt ülevaade presentatsioon, kus on nii programmi väljanägemine kui ka tema sisu.
-Projekti veebilehekülg: </p>
+<p>Järgmise teksti sisu annab ülevaade informaatika projektist,  mida tehti<br>
+Dmitri Tsumak ja Anastassia Ivanova(Tartu Ülikool, 1 aasta, arvutiteaduse instituut).
+Märkus: koos all toodud tekstiga  annab visuaalset ülevaadet presentatsioon, kus on nii programmi väljanägemine, kui ka tema sisu. </p>
 
-<p>Programmi põhimõte on anda ülevaade meelelahutustest, mis toimuvad erinevates Eesti linnades. Me võtsime kümme suurimat Eesti linnad: Tallinn, Tartu, Pärnu, Narva, Haapsalu, Rakvere, Valga, Kuressaare, Viljandi ja Võru ning koostasime nimekirja vaba aega veetmise võimalustest seal.
- Nimekiri pakub kasutajale mitmesuguseid alasid, sõltudes sellest, mida inimene tahab rohkem teha. Konkreetsemalt: me kogume info sellest võimalustest nagu klubi, kino, teater, bowling, piljard. Lisaks on meil ka andmed spordivõimalustest, mis on igas linnas erinevad. 
+<p>Programmi põhimõte on anda ülevaadet meelelahutustest, mis toimuvad erinevates Eesti linnades. Me võtsime kümme suurimat Eesti linnu: Tallinn, Tartu, Pärnu, Narva, Haapsalu, Rakvere, Valga, Kuressaare, Viljandi ja Võru ning koostasime nimekirja vaba aega veetmise võimalustest seal.
+Nimekiri pakub kasutajale mitmesuguseid alasid, sõltudes sellest, mida inimene tahab rohkem teha. Konkreetsemalt: me kogume info sellistest võimalustest nagu klubi, kino, teater, bowling, piljard. Lisaks on meil ka andmed spordivõimalustest, mis on igas linnas erinevad. 
 Veel kasulik koht meie programmis on see, et kui kellelegi ei sobi mitte ükski juba nimetatud variantidest, siis kasutaja saab valida see samas nimekirjas nuppu „Rohkem“, kust leiab veel rohkem pakkumisi , sh SPA keskused, pubid, paintball jne. Just nagu spordiga, igas linnas on oma nupu „Rohkem“ sisalduvus.</p>
 
-<p>Kuidas see kõik välja näeb? 
-Kui Te käivitage meie programmi, siis esimest, mida Te näete on mitte eriti suur aken, kus asuvad listbox linnade nimetustega ning huvialade nimekiri.  Programm on kirjutatud nii, et pärast huviala valimist, ilmub see samas aknas pilt, mis illustreerib valitud tegevusala.
-Pärast valimist, kasutajal tuleb vajutada nuppu „OK“, et programm näitaks infot. Pöörame tähelepanu, et nii listbox, kui ka nimekiri on omavahel seotud, st, et järgmine samm ei tule, kui Te ei valinud midagi mõlematest nimekirjadest. Sel juhul ilmub tähelepanuaken ja informeerib Teid, et midagi on valesti.
-Kui valik on tehtud, siis ilmub teine aken, mis sisaldab info kasutaja poolt tehtud valikust. Täpsemalt, akna keskel on listbox, mis näitab info kohast, kuhu inimene tahab minna. Andmed on kogutud otse koha veebileheküljest ning on pandud listboxi. Lisaks sellele, aken sisaldab ka veel mitu nuppe, mis pakkuvad konkreetseid kohti. Nt, kui kasutaja valib „Tallinn-Klubi“, siis ilmunud listbox näitab ühe klubi hinnanimekirja ning millised üritused toimuvad lähedastel päevadel. Nuppudel on kirjutatud veel mõnede klubide nimetused, et inimene saaks valida, kuhu ta sooviks minna.
+<h2>
+<a name="kuidas-see-k%C3%B5ik-v%C3%A4lja-n%C3%A4eb" class="anchor" href="#kuidas-see-k%C3%B5ik-v%C3%A4lja-n%C3%A4eb"><span class="octicon octicon-link"></span></a>Kuidas see kõik välja näeb?</h2>
+
+<p>Kui Te käivitate meie programmi, siis esimest, mida Te näete on mitte eriti suur aken, kus asub listbox linnade nimetustega ning huvialade nimekiri.  Programm on kirjutatud nii, et pärast huviala valimist, ilmub samas aknas pilt, mis illustreerib valitud tegevusala.
+Pärast valimist, kasutajal tuleb vajutada nuppu „OK“, et programm näitaks infot. Pöörame tähelepanu, et nii listbox, kui ka nimekiri on omavahel seotud, st, et järgmine samm ei tule, kui Te ei ole valinud midagi mõlematest nimekirjadest. Sel juhul ilmub tähelepanuaken ja informeerib Teid, et midagi on valesti.
+Kui valik on tehtud, siis ilmub teine aken, mis sisaldab infot kasutaja poolt tehtud valikust. Täpsemalt, akna keskel on listbox, mis näitab infot kohast, kuhu inimene tahab minna. Andmed on kogutud otse koha veebileheküljest ning on pandud listbox-i. Lisaks sellele, aken sisaldab ka veel mitu nuppe, mis pakkuvad konkreetseid kohti. Nt, kui kasutaja valib „Tallinn-Klubi“, siis ilmunud listbox näitab ühe klubi hinnanimekirja ning millised üritused toimuvad lähedastel päevadel. Nuppudel on kirjutatud veel mõnede klubide nimetused, et inimene saaks valida, kuhu ta sooviks minna.
 Üks huvitav programmi osa on selline, et programm võimaldab ka värskeid uudiseid lugeda ning ka uudiste otsingut teha. Kõik, mis on selleks vaja on trükkida otsingu sõna ning vajutada „Otsi“.<br>
-Otsing kuvad ekraanile kõiki uudiseid, milles on antud sõna.
-Kui käivitada uudist ilma otsingut, siis Te näete listboxi uudiste nimetustega, kus iga nimetus on link, mis viib uudise juurde veebileheküljest. Uudised on kogutud siit: uudised.err.ee
-Uudiste lugemise võimalus asub peaaknal huvialade ülal nimetusega „Maailma uudised“. See programmi lõik on kirjutatud    Easygui  mooduli abil. See on lihtne viis otsingu sõna seostada kogu funktsiooniga, ning  kuvada seda ekraanile.
-Kasutatud abimaterjalid.
-Kaks tähtsamatest moodulitest, mille abil me saime oma projekti lõpuni teha on pyquery ja requests. Neid kasutasime veebileheküljetest kogutud infot analüüsimisel ja töötlemisel. Täpsemalt, me kirjutasime funktsiooni, mis võimaldab info paigutada listboxi. 
-Pärast programmi ära tegemist, mõtlesime, kellel on võimalus teda kasutada. Ning saime aru, et ainult nendel, kellel on installitud Python. Inimesel, kes ei ole informaatikuga seotud, vaid tahaksid ainult programmi katsetada, sellist võimalust ei ole. Selle pärast installeerisime cx_freeze ning tema abil saime meie programmi töötamiseks valmis kõikidel arvutitel, sõltumata ka sellest, mis operatsiooni süsteem on mõnel arvutil installitud. Projekt õigesti töötab nii Windows-i kui ka Linux-iga.
-Projekti alguses varsti saime aru, et põhiprogrammi kod on liiga pikk. See oma järjekorras mõjub töötamise kiirusele. Sellepärast jagasime programmi kaustadesse: 
-• Kaustas „Linkid“ on linnade kaustad, kus oma järjekorras  seitse mini-programmi vastavalt huvialadele. Seega meil on 7x10 mini-programmi.
-• Kaustas „Pildid“ iga mini-programmi kaunistus, mis illustreerib iga huviala.
-• On ka kaust „Esiakna pildid“, kus asuvad pildid, mis ilmuvad huviala valimisel (nagu on ülalt mainitud )
-Miks valisime just sellist ideed?
-Me mõtlesime, et kuna praegu on reisimine väga levinud, siis meie projekt oleks üsna kasulik ja kättesaadav info saamise viis turistidele. Lisaks ka neile, kes äkki asuvad üldse võõras Eesti linnas. 
-Praegu programmi valdkond haarab ainult Eestimaa, vaid on väga lihtne ja mugav viis lisada ka teisi riike.
-Loodame, et ka teised arvavad, et meie projekti idee on üsna huvitav ning kasulik.
-Lugupidamisega,
-Dmitri Tsumak ja Anastassia Ivanova
-Tartu Ülikool
-arvutiteaduse instituut
+Otsing kuvab ekraanile kõiki uudiseid, milles on antud sõna.
+Kui käivitada uudist ilma otsingut, siis Te näete listbox-i uudiste nimetustega, kus iga nimetus on link, mis viib uudise juurde veebileheküljest. Uudised on kogutud siit: uudised.err.ee
+Uudiste lugemise võimalus asub peaaknal huvialade ülal nimetusega „Maailma uudised“. See programmi lõik on kirjutatud  Easygui  mooduli abil. See on lihtne viis otsingu sõna seostada kogu funktsiooniga, ning  kuvada seda ekraanile.</p>
+
+<h2>
+<a name="kasutatud-abimaterjalid" class="anchor" href="#kasutatud-abimaterjalid"><span class="octicon octicon-link"></span></a>Kasutatud abimaterjalid.</h2>
+
+<p>Kaks tähtsamatest moodulitest, mille abil me saime oma projekti lõpuni teha on pyquery ja requests. Neid kasutasime veebileheküljetest kogutud infot analüüsimisel ja töötlemisel. Täpsemalt, me kirjutasime funktsiooni, mis võimaldab infot paigutada listbox-i. 
+Pärast programmi ära tegemist, mõtlesime kellel on võimalus seda kasutada ning saime aru, et ainult nendel, kellel on installitud Python. Inimesel, kes ei ole informaatikuga seotud, vaid tahaks ainult programmi katsetada, sellist võimalust ei ole. Selle pärast installeerisime cx_freeze ning tema abil saime meie programmi töötamiseks valmis kõikidel arvutitel, sõltumata ka sellest, mis operatsiooni süsteem on mõnel arvutil installitud. Projekt õigesti töötab nii Windows-il kui ka Linux-il.
+Projekti alguses varsti saime aru, et põhiprogrammi kood on liiga pikk. See oma järjekorras mõjub töötamise kiirusele. Sellepärast jagasime programmi kaustadesse:  </p>
+
+<p>• Kaustas „Linkid“ on linnade kaustad, kus oma järjekorras  seitse mini-programmi vastavalt huvialadele. Seega meil on 7x10 mini-programmi.<br>
+• Kaustas „Pildid“ iga mini-programmi kaunistus, mis illustreerib iga huviala.<br>
+• On ka kaust „Esiakna pildid“, kus asuvad pildid, mis ilmuvad huviala valimisel (nagu on ülalt mainitud )</p>
+
+<h2>
+<a name="miks-valisime-just-sellist-ideed" class="anchor" href="#miks-valisime-just-sellist-ideed"><span class="octicon octicon-link"></span></a>Miks valisime just sellist ideed?</h2>
+
+<p>Me mõtlesime, et kuna praegu on reisimine väga levinud, siis meie projekt oleks üsna kasulik ja kättesaadav info saamise viis turistidele. Lisaks ka neile, kes äkki asuvad üldse võõras Eesti linnas. 
+Praegu programmi valdkond haarab ainult Eestimaa, vaid on väga lihtne ja mugav viis lisada ka teisi riike.</p>
+
+<p>Loodame, et ka teised arvavad, et meie projekti idee on üsna huvitav ning kasulik.  </p>
+
+<p>Lugupidamisega,</p>
+
+<p>Dmitri Tsumak ja Anastassia Ivanova<br>
+Tartu Ülikool<br>
+arvutiteaduse instituut<br>
 aasta 2013-2014</p>
         </section>
 
